--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^13.1.9",
     "ajv": "^8.11.0",
     "classnames": "^2.2.6",
+    "email-js": "^2.0.2",
     "moment": "^2.29.4",
     "node-forge": ">=1.3.0",
     "object-path": "^0.11.8",
